--- a/templates/property/property_detail.html
+++ b/templates/property/property_detail.html
@@ -6,18 +6,18 @@
     	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 heading-section text-start ftco-animate">
-				<h2 class="mb-2">{{property_data.name}}</h2>
+				<h2 class="mb-2">{{property_name}}</h2>
 			</div>
 		</div>
 	</div>
     <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <img src="{% static 'images/realestate.jpg' %}" alt="" width="100%"/>
+      <img src="{{image.url}}" alt="" width="100%"/>
     </div>
     <div class="col-sm-7">
         <p>
-            {{property_data.descroption|linebreaks}}
+            {{description|linebreaks}}
         </p>
 
         {% comment %} <div class="container">
@@ -94,40 +94,22 @@
     </div>
   </div>
 
-
-  <div class="mt-4">
-        <h2  class="mb-2">Gallery </h2>
-	  </div>
-      <div class="container">
-          <div class="row my-0">
-            <div class="col-6 col-md-3 mb-4">
-                <img src="{% static 'images/realestate.jpg' %}" alt="" width="100%"/>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-                <img src="{% static 'images/realestate.jpg' %}" alt="" width="100%"/>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-                <img src="{% static 'images/realestate.jpg' %}" alt="" width="100%"/>
-            </div>
-            <div class="col-6 col-md-3 mb-4">
-                <img src="{% static 'images/realestate.jpg' %}" alt="" width="100%"/>
-            </div>
-          </div>
-      </div>
-  {% comment %} <div class="container mt-5">
-    <div class="row">
-        <div class="col-sm-6">
-            dfdf
-        </div>
-        <div class="col-sm-6">
-            dsds
-        </div>
-        <div class="col-sm-6">dssd</div>
-        <div class="col-sm-6">sdds</div>
-        <div class="col-sm-6">sd   /div>
+{% if images %}
+<div class="mt-4">
+      <h2  class="mb-2">Gallery </h2>
     </div>
-  </div> {% endcomment %}
+    <div class="container">
+        <div class="row my-0">
+          {% for image in images %}
+          <div class="col-6 col-md-3 mb-4">
+              <img src="{{image.image.url}}" alt="" width="100%"/>
+          </div>
+          {% endfor %}
+        </div>
+    </div>
 </div>
+
+{% endif %}
 </section>
 
 {% endblock content %}
