--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -22,10 +22,10 @@
 
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a href="{% url 'home_view' %}" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">About US</a></li>
-        <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Properties</a></li>
-        <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Our Projects</a></li>
+        <li class="nav-item active"><a href="{% url 'home:home_view' %}" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="{% url 'home:home_view' %}" class="nav-link">About US</a></li>
+        <li class="nav-item"><a href="{% url 'assets:property_list' %}" class="nav-link">Properties</a></li>
+        <li class="nav-item"><a href="{% url 'assets:property_list' %}" class="nav-link">Our Projects</a></li>
         {% comment %} <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li> {% endcomment %}
         <li class="nav-item"><a href="#contact-us" class="nav-link">Contact US</a></li>
       </ul>
@@ -33,7 +33,7 @@
   </div>
 </nav>
 <!-- Nav Ends -->
-<style>
+{% comment %} <style>
 	#carouselExampleControls {
 		max-height: 100vh;
 	}
@@ -43,14 +43,14 @@
 		height: 100vh; /* Ensures the height adjusts proportionally to the width */
     	object-fit: cover;
 	}
-</style>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" >
-  <div class="carousel-inner">
-    <div class="carousel-item ">
-      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block" alt="...">
+</style> {% endcomment %}
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner overflow-hidden">
+    <div class="carousel-item">
+      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100 h-100" style="object-fit: contain;" alt="...">
     </div>
     <div class="carousel-item active">
-      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block" alt="...">
+      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100 h-100" style="object-fit: contain;" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -61,8 +61,8 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-  </div>
 </div>
+
 {% comment %} <section class="hero-wrap hero-wrap-2 js-fullheight">
 	{% comment %} <div class="hero-wrap ftco-degree-bg"> {% endcomment %}
 		{% comment %} <div class="overlay"></div> {% endcomment %}
@@ -115,7 +115,7 @@
 			</div>
 			<div class="col-lg-7"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="section-about-title pe-3">About Us</h1>
+				<h1 class="section-about-title pe-3">About <span style="color:#dc1666;">Us</span></h1>
 				<h1 class="mb-4">Welcome to <span class="text-primary">BhumiReality</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
@@ -159,7 +159,7 @@
 						<p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
 					</div>
 				</div> {% endcomment %}
-				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" href="">Read More</a>
+				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" href="{% url 'home:about_view' %}">Read More</a>
 			</div>
 		</div>
 	</div>
@@ -354,7 +354,7 @@
 					</div>
 				</div>
 				<div class="col-sm-6 col-md-3 mb-3 ">
-					<a href="{% url 'property_list' %}">
+					<a href="{% url 'assets:property_list' %}">
 						<div class="card" style="height:10rem;background-color:#dc1666;">
 							<div class="card-body text-center text-white">
 								<p>View More</p>
