--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -24,7 +24,7 @@
         <li class="nav-item"><a href="{% url 'home:home_view' %}" class="nav-link">About US</a></li>
         <li class="nav-item"><a href="{% url 'assets:property_list' %}" class="nav-link">Properties</a></li>
         <li class="nav-item"><a href="{% url 'assets:project_list' %}" class="nav-link">Our Projects</a></li>
-        {% comment %} <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li> {% endcomment %}
+        <li class="nav-item"><a href="{% url 'home:home_view' %}" class="nav-link">Blog</a></li>
         <li class="nav-item"><a href="#contact-us" class="nav-link">Contact US</a></li>
       </ul>
     </div>
