--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       rel="stylesheet"
       href="{% static 'css/open-iconic-bootstrap.min.css' %}"
