--- a/templates/property/property_detail.html
+++ b/templates/property/property_detail.html
@@ -12,14 +12,34 @@
 	</div>
     <div class="container">
   <div class="row">
-    <div class="col-md-5">
-      <img src="{{image.url}}" alt="" width="100%"/>
+    <div class="col-md-5 col-sm-12">
+      <img src="{{image.url}}" class="rounded" alt="" width="100%"/>
     </div>
-    <div class="col-sm-7">
-        <p>
-            {{description|linebreaks}}
-        </p>
-
+    <div class="col-sm-12 col-md-7">    
+        <h1>
+            &nbsp;&#x20b9; {{price}}
+        </h1>
+        <h3 style="color:{% if availability == 'sold out' %}red {% else %}green{% endif %}">&nbsp;{{ availability|upper}}</h3>
+            <div class="col-md">
+                <div class="ftco-footer-widget mb-4">
+                    <div class="block-23 mb-3">
+                        <ul>
+                            <li>
+                                <span class="icon icon-map-marker text-black-50"></span><span class="text text-black-50">{{property_address}}</span>
+                            </li>
+                            <li>
+                                <span class="fa-solid fa-ruler text-black-50"></span><span class="text text-black-50">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{square_footage}} sqft</span>
+                            </li>
+                            <li>
+                                <span class="fa-solid fa-bath text-black-50"></span><span class="text text-black-50">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{no_of_bathrooms}}</span>
+                            </li>
+                            <li>
+                                <span class="fa-solid fa-bed text-black-50"></span><span class="text text-black-50">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{no_of_bedrooms}}</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         {% comment %} <div class="container">
             <div class="row">
                     <div class="col-sm-6 mb-2">
@@ -92,25 +112,76 @@
             </div>
         </div> {% endcomment %}
     </div>
+    <div class="row">
+        <div class="col-sm-12 ml-2">
+            <p>{{description|linebreaks}}</p>
+        </div>
+    </div>
   </div>
 
-{% if images %}
-<div class="mt-4">
-      <h2  class="mb-2">Gallery </h2>
-    </div>
-    <div class="container">
-        <div class="row my-0">
-          {% for image in images %}
-          <div class="col-6 col-md-3 mb-4">
-              <img src="{{image.image.url}}" alt="" width="100%"/>
-          </div>
-          {% endfor %}
+<div class="modal fade bd-example-modal-lg" id="modal-dialog" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div id="image-show" class="modal-body">
+                <div>
+                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
 
+
+{% if images %}
+<div class="mt-4">
+    <h2  class="mb-2">Gallery</h2>
+</div>
+<div class="container">
+    <div class="row my-0">
+          {% for image in images %}
+          <div class="col-6 col-md-3 mb-4">
+              <img src="{{image.image.url}}" class="rounded" onclick="showImage('{{image.id}}')" alt="" width="100%"/>
+          </div>
+          {% endfor %}
+        </div>
+    </div>
+</div>  
+
 {% endif %}
 </section>
+<script>
+    function openEnrollModal() {
+            var EnrollModal = new bootstrap.Modal(document.getElementById('modal-dialog'));
+            EnrollModal.show();
+    }
+    function showImage(id){
+        $.ajax({
+            type: 'GET', 
+            url: '/assets/property/image/'+id,
+            success: successFunction
+        });
+        function successFunction(msg) {
+            if (msg.status === 200) {
+                document.getElementById('image-show').innerHTML = ""
+                
+                document.getElementById('image-show').innerHTML += `
+                <img src="${msg.data.image}" width="100%" heigth="auto" class="rounded"/>
+                `
+                openEnrollModal()
+            }
+        }
+    }
+    function closeModal() {
+        var EnrollModal = new bootstrap.Modal(document.getElementById('modal-dialog'));
+        EnrollModal.hide();
+    }
+</script>
 
 {% endblock content %}
 
