--- a/templates/property/property_list.html
+++ b/templates/property/property_list.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load custom_filters %}
 {% load static %}
 {% block content %}
 <!-- Nav Starts -->
@@ -74,7 +75,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h4 class="card-title">{{property.property_name}}</h4>
-                            <h6 style="color:green;">{{property.availability.title}}</h6>
+                            <h6 style="color:{% if availability == 'sold_out' %}red {% else %}green{% endif %}">{{property.availability|upper|replace_underscores}}</h6>
                             <h6>Address : {{property.address}}</h6>
                             <h6>Plot Size : {{property.square_footage}}</h6>
                             <h6>Price : {{property.price}}</h6> 
