--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -442,18 +442,20 @@
 				<img src="{% static '' %}" width="100%" alt="">
 			</div> {% endcomment %}
 			<div class="col-md-12 block-9 mb-md-5">
-            <form action="#" class="bg-light p-5 contact-form">
+				<div id="contact_us_form"></div>
+            <form onSubmit="contactForm(event)" method="POST" class="bg-light p-5 contact-form">
+				{% csrf_token %}
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" name="full_name" class="form-control" placeholder="Your Name">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Email">
+                <input type="text" class="form-control" name="email" placeholder="Your Email">
               </div>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Subject">
+                <input type="text" class="form-control" name="subject" placeholder="Subject">
               </div>
               <div class="form-group">
-                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                <textarea id="" cols="30" rows="7" class="form-control" name="message" placeholder="Message"></textarea>
               </div>
               <div class="form-group">
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
@@ -465,4 +467,43 @@
 		</div>
 	</div>
 </section>
+<script>
+function contactForm(event) {
+        event.preventDefault();
+        var formData = $('.contact-form').serialize();
+
+        $.ajax({
+            type: 'POST',
+            url: '/contact/us/',
+            data: formData,
+            success: function (response) {
+                $('.contact-error-message').remove();
+                if (response.status === 201) {
+                    $('#contact_us_form').html(`
+                    <div class="alert alert-success" role="alert">
+                        ${response.message}
+                    </div>
+                `);
+
+                    // Reset the form
+                    document.querySelector('.contact-form').reset();
+
+                    setTimeout(function () {
+                        $('#contact_us_form').fadeOut('slow');
+                    }, 4000);
+                } else if (response.status === 400 && response.errors) {
+                    $.each(response.errors, function (field, error) {
+                        var inputField = $('[name="' + field + '"]');
+                        inputField.after('<div class="contact-error-message text-danger">' + error + '</div>');
+                    });
+                } else {
+                    console.error("Something Went Wrong");
+                }
+            },
+            error: function (error) {
+                console.log(error);
+            }
+        });
+    }
+</script>
 {% endblock content %}
