--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,9 +1,9 @@
 {% load static %}
-<footer class="ftco-footer ftco-bg-dark ftco-section">
+<footer class="ftco-footer ftco-bg-dark ftco-section" style="height:50%">
   <div class="container">
-    <div class="row mb-5">
+    <div class="row">
       <div class="col-md">
-        <div class="ftco-footer-widget mb-4">
+        <div class="ftco-footer-widget">
           <h2 class="ftco-heading-2">
             <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
           </h2>
