--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -12,7 +12,7 @@
             <div class="owl-carousel carousel-car">
                 {% for image in images %}
                 <div class="item">
-                    <img src="{{image.image.url}}" height="250px" width="100px" class="card-img-top" alt="...">
+                    <img src="{{image.image.url}}" class="rounded" height="250px" width="100px" class="card-img-top" alt="...">
                 </div>
                 {% endfor %}
             </div>
