project:plot and location style changes

--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -60,13 +60,13 @@
 		</div>
         {% endif %}
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <h3 class="text text-center project-detail-hover">Plot Layout</h3>
-                <img src="{{image.url}}" height="100%" width="100%" alt="">
+                <img src="{{image.url}}" height="auto" width="100%" alt="">
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <h3 class="text text-center project-detail-hover">Location</h3>
-                <img src="{{image.url}}" height="100%" width="100%" alt="">
+                <img src="{{image.url}}" height="auto" width="100%" alt="">
             </div>
         </div>
 	</div>
