font:Nunito Added

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -115,7 +115,7 @@
 			</div>
 			<div class="col-lg-7"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="section-about-title pe-3">About <span style="color:#dc1666;">Us</span></h1>
+				<h1 class="section-about-title pe-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
 				<h1 class="mb-4">Welcome to <span class="text-primary">BhumiReality</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
@@ -195,7 +195,7 @@
 	<div class="container">
 		<div class="row justify-content-center mb-5">
 			<div class="col-md-7 text-center heading-section ftco-animate">
-				<h2 class="mb-3">Our Facilities</h2>
+				<h2 class="mb-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Our Facilities</h2>
 			</div>
 		</div>
 		<div class="row h-100">
@@ -316,7 +316,7 @@
 	<div class="container py-5">
 					<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-				<h2 class="mb-2">Properties</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;"	>Properties</h2>
 			</div>
 		</div>
 		<div class="row g-5 align-items-center">
@@ -366,7 +366,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 				<span class="subheading mt-5">What we offer</span>
-				<h2 class="mb-2">Gallery</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Gallery</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -434,7 +434,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-				<h2 class="mb-2">Contact Us</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Contact Us</h2>
 			</div>
 		</div>
 		<div class="row">
