--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -5,7 +5,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 heading-section text-start ftco-animate">
-				<h2 class="mb-2">{{project_name}}</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">{{project_name}}</h2>
 			</div>
 		</div>
         <div class="row">
@@ -22,7 +22,7 @@
         </div>
         {% if services %}
         <div class="row">
-            <h1 class="text font-weight-bold" >Services</h1>
+            <h1 style="font-family: 'Nunito', sans-serif;font-weight: 900;" >Services</h1>
         </div>
         <div class="row">
             {% for service in services %}
@@ -38,7 +38,7 @@
         {% endif %}
         {% if amenity %}
         <div class="row">
-            <h1 class="text font-weight-bold" >Amenities</h1>
+            <h1 style="font-family: 'Nunito', sans-serif;font-weight: 900;" >Amenities</h1>
         </div>
         <div class="row">
 			<div class="col-md-12">
@@ -61,11 +61,11 @@
         {% endif %}
         <div class="row">
             <div class="col-sm-12">
-                <h3 class="text text-center project-detail-hover">Plot Layout</h3>
+                <h3 class="text text-center project-detail-hover" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Plot Layout</h3>
                 <img src="{{image.url}}" height="auto" width="100%" alt="">
             </div>
             <div class="col-sm-12">
-                <h3 class="text text-center project-detail-hover">Location</h3>
+                <h3 class="text text-center project-detail-hover" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Location</h3>
                 <img src="{{image.url}}" height="auto" width="100%" alt="">
             </div>
         </div>
