--- a/templates/projects/project_list.html
+++ b/templates/projects/project_list.html
@@ -8,7 +8,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 heading-section text-start ftco-animate">
-				<h2 class="mb-2">Our Projects</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Our Projects</h2>
 			</div>
 		</div>
 	</div>
