--- a/templates/property/property_list.html
+++ b/templates/property/property_list.html
@@ -27,7 +27,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 heading-section text-start ftco-animate">
-				<h2 class="mb-2">Properties</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Properties</h2>
 			</div>
 		</div>
 	</div>
