--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,7 +1,8 @@
 {% extends "index.html" %}
 {% load static %}
 {% block content %}
-<nav
+{% include "includes/navbar.html" %}
+{% comment %} <nav
   class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
   id="ftco-navbar"
   style="position: absolute;"
@@ -31,7 +32,7 @@
       </ul>
     </div>
   </div>
-</nav>
+</nav> {% endcomment %}
 <!-- Nav Ends -->
 {% comment %} <style>
 	#carouselExampleControls {
@@ -44,13 +45,26 @@
     	object-fit: cover;
 	}
 </style> {% endcomment %}
+<style>
+    .carousel-item {
+      height: 86.5vh; 
+    }
+    .carousel-item img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner overflow-hidden">
-    <div class="carousel-item">
-      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100 h-100" style="object-fit: contain;" alt="...">
-    </div>
+  <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100 h-100" style="object-fit: contain;" alt="...">
+      <img class="d-block w-100" src="{% static 'images/thumbnail3.jpeg' %}" alt="">
+    </div>
+    <div class="carousel-item ">
+      <img class="d-block w-100" src="{% static 'images/thumbnail3.jpeg' %}" alt="">
+    </div>
+    <div class="carousel-item ">
+      <img class="d-block w-100" src="{% static 'images/thumbnail2.jpeg' %}" alt="">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -62,6 +76,25 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+{% comment %} <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner overflow-hidden">
+    <div class="carousel-item active">
+      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100 h-80" style="object-fit: contain;" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100 h-80" style="object-fit: contain;" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> {% endcomment %}
 
 {% comment %} <section class="hero-wrap hero-wrap-2 js-fullheight">
 	{% comment %} <div class="hero-wrap ftco-degree-bg"> {% endcomment %}
