styles:some css changes

--- a/templates/home/about_us.html
+++ b/templates/home/about_us.html
@@ -6,14 +6,14 @@
 <!-- About Start -->
 <div class="container-fluid about">
     <div class="container py-5">
-        <h1 class="section-about-title pe-3">About <span style="color:#dc1666">Us</span> </h1>
+        <h1 class="section-about-title pe-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666">Us</span> </h1>
         <div class="row g-5 align-items-center justify-content-center">
 			<div class="col-sm-4">
 				<img src="{% static 'images/logo.png' %}" class="img-fluid w-10 h-10" alt="">
 			</div>
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="mb-4">Welcome to <span class="text-primary">BhumiReality</span></h1>
+				<h1 class="mb-4">Welcome to <span class="text-primary">Bhumi Realty</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
 				<p class="mb-4">Revered as one of the most reliable real estate
