--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,7 +5,9 @@
   id="ftco-navbar"
 >
   <div class="container">
-    <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
+    <a href="{% url 'home:home_view' %}">
+      <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
+    </a>
     <button
       class="navbar-toggler"
       type="button"
@@ -21,11 +23,11 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a href="{% url 'home:home_view' %}" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="{% url 'home:home_view' %}" class="nav-link">About US</a></li>
+        <li class="nav-item"><a href="{% url 'home:about_view' %}" class="nav-link">About US</a></li>
         <li class="nav-item"><a href="{% url 'assets:property_list' %}" class="nav-link">Properties</a></li>
         <li class="nav-item"><a href="{% url 'assets:project_list' %}" class="nav-link">Our Projects</a></li>
         <li class="nav-item"><a href="{% url 'home:home_view' %}" class="nav-link">Blog</a></li>
-        <li class="nav-item"><a href="#contact-us" class="nav-link">Contact US</a></li>
+        <li class="nav-item"><a href="#" onclick="navigate('contact-us')" class="nav-link">Contact US</a></li>
       </ul>
     </div>
   </div>
