--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <link
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -74,7 +72,40 @@
         />
       </svg>
     </div>
+    <script>
+      function setPath(path){
+            localStorage.setItem("path",path)
+        }
+        function navigate(path){
+            setPath(path);
+            window.location.href="/"
+        }
+        // Function to scroll to the "about-us" section
+        function scrollToAboutUsSection(path) {
+            var aboutUsSection = document.getElementById(path);
 
+            if (aboutUsSection) {
+                aboutUsSection.scrollIntoView({
+                    behavior: "smooth"
+                });
+            }
+        }
+        // Function to initiate the scroll after 5 seconds
+        function initiateScrollToAboutUs(path) {
+            setTimeout(function () {
+                localStorage.removeItem("path")
+                if (path){
+                    scrollToAboutUsSection(path);
+                }
+            }, 100);
+        }
+
+        // Call the function to initiate the scroll after the page loads
+        window.onload = function () {
+            var path=localStorage.getItem("path")
+            initiateScrollToAboutUs(path);
+        };
+    </script>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
