--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -148,7 +148,7 @@
 			</div> {% endcomment %}
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="section-about-title pe-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
+				<h1 class="section-about-title pe-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
 				<h1 class="mb-4">Welcome to <span class="text-primary">Bhumi Realty</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
