--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -23,7 +23,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 heading-section text-start ftco-animate">
-				<h2 class="mb-2 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">{{project_name}}</h2>
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">{{project_name}}</h2>
 			</div>
 		</div>
         <div class="row">
