--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -54,28 +54,36 @@
       height: 100%;
       width: 100%;
     }
+	@media (max-width: 767px) {
+    .carousel-item img.carousel-image-home {
+        height: 60vh; /* Adjust the height as needed */
+        width: auto;
+    }
+	#carouselExampleControls{
+		height: 60vh; /* Adjust the height as needed */
+        width: auto;
+	}
+}
   </style>
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="{% static 'images/thumbnail3.jpeg' %}" alt="">
-    </div>
-    <div class="carousel-item ">
-      <img class="d-block w-100" src="{% static 'images/thumbnail3.jpeg' %}" alt="">
-    </div>
-    <div class="carousel-item ">
-      <img class="d-block w-100" src="{% static 'images/thumbnail2.jpeg' %}" alt="">
-    </div>
+  {% if carousels %}
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+	<div class="carousel-inner">
+	{% for carousel in carousels %}
+      <div class="carousel-item {% if forloop.first %}active{% endif %}">
+        <img class="d-block w-100 carousel-image-home" src="{{carousel.image.url}}" alt="">
+      </div>
+    {% endfor %}
+	</div>
+	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	  <span class="sr-only">Next</span>
+	</a>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  {% endif %}
 
 {% comment %} <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner overflow-hidden">
@@ -148,7 +156,7 @@
 			</div> {% endcomment %}
 			<div class="col-sm-12"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
-				<h1 class="section-about-title pe-3 text-center" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
+				<h1 class="section-about-title pe-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">About <span style="color:#dc1666;font-family: 'Nunito', sans-serif;font-weight: 900;">Us</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
 				<p class="mb-4">Revered as one of the most reliable real estate
@@ -225,8 +233,8 @@
 
 <section class="ftco-section">
 	<div class="container">
-		<div class="row justify-content-center mb-5">
-			<div class="col-md-7 text-center heading-section ftco-animate">
+		<div class="row mb-5">
+			<div class="col-md-7 heading-section ftco-animate">
 				<h2 class="mb-3" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Our Facilities</h2>
 			</div>
 		</div>
@@ -346,9 +354,9 @@
 
 <div class="container-fluid about">
 	<div class="container py-5">
-					<div class="row justify-content-center">
-			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;"	>Properties</h2>
+					<div class="row">
+			<div class="col-md-12 heading-section  ftco-animate mb-5">
+				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Properties</h2>
 			</div>
 		</div>
 		<div class="row g-5 align-items-center">
@@ -388,7 +396,6 @@
 	<div class="container ">
 		<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
-				<span class="subheading mt-5">What we offer</span>
 				<h2 class="mb-2" style="font-family: 'Nunito', sans-serif;font-weight: 900;">Gallery</h2>
 			</div>
 		</div>
